fix: navbar wrap bug Fixes #14

--- a/src/components/Navbar/CategoryDropdown/CategoryDropdown.scss
+++ b/src/components/Navbar/CategoryDropdown/CategoryDropdown.scss
@@ -1,3 +1,9 @@
 .category-dropdown {
-  width: 400px;
+  width: 100%;
+}
+
+@media screen and (min-width: 992px) {
+  .category-dropdown {
+    width: 400px;
+  }
 }
